--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/click-event.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
   </head>
-  <body class="bg-dark text-light">
+  <body class="bg-green text-light">
     <main>
       <h1>Password Generator</h1>
       <h2>Click on the button to get started!</h2>
       <hr/>
 
-      <pre class="text-dark bg-light p-5" id="password-display">Password will go here...</pre>
-      <button id="password-btn" class="btn btn-block btn-info ">Generate Password</button>
+      <pre class="text-dark bg-light p-5" id="nyana">Password will go here...</pre>
+      <button id="agga" class="btn btn-block btn-info ">Generate Password</button>
     </main>
 
     <!-- Added link to the jQuery library -->
